styles/style.css
/* Write GOOD comments so that next developer ( killer psycopath who knows where you stay ) ... */
/* .... who is going to maintain this code; need NOT have to get back to you */

/* Use Required Google Font with Weights */
@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&family=League+Spartan:wght@400;500;700&display=swap");

/* Universal Selector & explicitly set box-sizing type */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/*  everything applicable to or can be used for all elements */
/* color palette */
:root {
  --bg-color: hsl(212, 45%, 89%);
  --card-bg-color: hsl(0, 0%, 100%);
  --card-title-color: hsl(218, 44%, 22%);
  --card-content-color: hsl(220, 15%, 55%);
  --min-width: 480px;

  --ff-primary: "League Spartan", sans-serif;

  --fw-400: 400;
  --fw-500: 500;
  --fw-700: 700;
}

body {
  background-image: url("../images/bg-pattern-top-mobile.svg"),
    url("../images/bg-pattern-bottom-mobile.svg");
  background-repeat: no-repeat;
  background-position: top left, right bottom -5px;
}

/* parent grid wrapper */
/* Mobile 1st design approach */
.main {
  display: grid;
  grid-template-columns: 1fr; /* For mobile view only single column is enough per design as each of the items stack on each other */
  grid-auto-rows: minmax(100px, auto); /* 100px ?? */
  max-width: 960px; /* ?? */
  margin: 0 25px;
  gap: 5px;
  grid-template-areas:
    "title-card"
    "users-rating-cards"
    "user-reviews";
}

/* -------------------- */
/* child 1 grid wrapper */
/* -------------------- */
.title-card {
  display: grid;
  grid-template-columns: 1fr;
  grid-auto-rows: minmax(20px, auto); /* 100px ?? */
  max-width: 960px; /* ?? */
  margin: 0 auto;
  padding: 20px 40px 0px 40px;
  gap: 10px;
  grid-template-areas:
    "title-card__header"
    "title-card__info";
}

.title-card__header {
  /* justify-self: center; */
  text-align: center;
  margin: 40px 5px 20px 5px;
  font-size: 2.2em;
  font-weight: var(--fw-700);
  color: hsl(300, 43%, 22%);
}

.title-card__info {
  text-align: center;
  color: hsl(303, 10%, 53%);
  font-size: 1em;
  font-weight: var(--fw-500);
  line-height: 1.25em;
  /* place-self: center; */
  /* margin: 0 auto; */
}

/* Desktop 2nd design approach */
@media screen and (min-width: 480px) {
  .main {
    display: grid;
    grid-template-columns: 420px 530px;
    grid-auto-rows: minmax(100px, auto); /* 100px ?? */
    max-width: 1060px; /* ?? */
    margin: 60px auto;
    gap: 5px;
    grid-template-areas:
      "title-card users-rating-cards"
      "user-reviews user-reviews";
  }

  .title-card {
    padding: 0px;
  }

  .title-card__header {
    text-align: start;
    padding-right: 120px;
    font-size: 2.5em;
  }

  .title-card__info {
    text-align: start;
    padding-right: 70px;
    font-size: 0.9em;
  }
}

/* -------------------- */
/* child 2 grid wrapper */
/* -------------------- */

/* Mobile 1st Design */
.users-rating-cards {
  display: grid;
  grid-template-columns: 1fr;
  grid-auto-rows: minmax(50px, auto); /* ?? minmax , 50px ?? */
  gap: 20px;
  max-width: 960px; /* ?? */
  grid-template-areas:
    "user-rating-card-1"
    "user-rating-card-2"
    "user-rating-card-3";
  margin: 20px 0;
}

.user-rating-card {
  display: grid;
  grid-template-columns: 1fr;
  grid-auto-rows: minmax(20px, auto);
  max-width: 960px; /* ?? */
  background-color: hsl(300, 24%, 96%);
  gap: 10px;
  grid-template-areas:
    "user-rating-card__rating"
    "user-rating-card__review-description";
  /* border: 1px solid black; */
  border-radius: 15px;
  padding: 10px 0;
}

.user-rating-card__rating {
  justify-self: center;
  margin: 10px auto 0 auto;
}

.user-rating-card__review-description {
  justify-self: center;
  margin: 0 auto 10px auto;
  font: var(--ff-primary);
  font-size: 15px;
  font-weight: var(--fw-700);
  color: hsl(300, 43%, 22%);
  /* margin-top: 10px;
  margin-left: -25px; */
}

/* Desktop 2nd Design */
/* Do changes needed only for desktop below */
@media screen and (min-width: 480px) {
  .users-rating-cards {
    grid-auto-rows: minmax(25px, auto);
    gap: 5px;
  }

  .user-rating-card {
    padding: 10px 20px 10px 0;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-areas: "user-rating-card__rating user-rating-card__review-description";
  }

  .user-rating-card-1 {
    justify-self: start;
    align-self: center;
  }

  .user-rating-card-2 {
    justify-self: center;
    align-self: center;
  }

  .user-rating-card-3 {
    justify-self: end;
    align-self: center;
  }

  .user-rating-card__rating {
    margin: 0;
  }

  .user-rating-card__review-description {
    margin: 0;
  }
}

/* ------------------------------------------------------------ */
/*                      3rd grid wrapper */
/* ------------------------------------------------------------ */

.user-reviews {
  display: grid;
  grid-template-columns: 1fr;
  grid-auto-rows: minmax(100px, auto);
  max-width: 960px;
  margin: 0 auto 90px auto;
  gap: 15px;
  grid-template-areas:
    "user-review-card-1"
    "user-review-card-2"
    "user-review-card-3";
}

/* child 3 grid wrapper */
.user-review-card {
  display: grid;
  grid-template-columns: 0.7fr 2fr;
  grid-auto-rows: minmax(10px, auto);
  gap: 20px;
  max-width: 960px;
  padding: 35px;
  background-color: hsl(300, 43%, 22%);
  border-radius: 15px;
  grid-template-areas:
    "user-review-card__img user-review-card__name"
    "user-review-card__img user-review-card__status"
    "user-review-card__review user-review-card__review";
}

.user-review-card__img {
  border-radius: 50%;
  justify-self: start;
  width: 60px;
  height: 60px;
}

.user-review-card__name {
  align-self: center;
  color: hsl(0, 0%, 100%);
}

.user-review-card__status {
  align-self: center;
  color: hsl(333, 80%, 67%);
}

.user-review-card__review {
  font: var(--ff-primary);
  font-size: 15px;
  word-spacing: 0.2em;
  /* margin-top: 20px; */
  line-height: 1.3em;
  color: hsl(0, 0%, 100%);
  font-weight: var(--fw-500);
  padding: 0 30px 0 0;
}

@media screen and (min-width: 480px) {
  .user-reviews {
    display: grid;
    /* 3 child items */
    grid-template-columns: repeat(3, 1fr);

    /* min value decides placement of grid items*/
    grid-auto-rows: minmax(215px, auto);
    max-width: 960px;
    margin: 30px auto;
    gap: 35px;
    /* padding: 10px; */
    grid-template-areas: "user-review-card-1 user-review-card-2 user-review-card-3";
  }

  .user-review-card {
    padding: 20px;
    gap: 10px;
  }

  .user-review-card__name {
    font-size: 0.8em;
  }

  .user-review-card__status {
    font-size: 0.8em;
  }

  .user-review-card__review {
    padding: 0;
    word-spacing: 0;
    margin: 0;
  }

  .user-review-card-1 {
    align-self: start;
  }

  .user-review-card-2 {
    /* margin-top: 10px; */
    align-self: center;
  }

  .user-review-card-3 {
    /* margin-top: 20px; */
    align-self: end;
  }
}

/* ------------------------------------------------------ */
/*                  grid area names                       */
/* ------------------------------------------------------ */

.title-card {
  grid-area: title-card;
  /* debugging purpose only */
  /* border: 1px solid red; */
}

.users-rating-cards {
  grid-area: users-rating-cards;
  /* debugging purpose only */
  /* border: 1px solid rgb(8, 0, 255); */
}

.user-reviews {
  grid-area: user-reviews;
  /* debugging purpose only */
  /* border: 3px dotted rgb(255, 0, 200); */
}

.user-review-card-1 {
  grid-area: user-review-card-1;
  /* border: 1px solid rgb(0, 255, 115); */
}

.user-review-card-2 {
  grid-area: user-review-card-2;
  /* border: 1px solid rgb(3, 35, 18); */
}

.user-review-card-3 {
  grid-area: user-review-card-3;
  /* border: 1px solid rgb(255, 77, 0); */
}

.user-rating-card {
  grid-area: user-rating-card;
}

.user-rating-card__rating {
  grid-area: user-rating-card__rating;
}

.user-rating-card__review-description {
  grid-area: user-rating-card__review-description;
}

.user-rating-card-1 {
  grid-area: user-rating-card-1;
}

.user-rating-card-2 {
  grid-area: user-rating-card-2;
}

.user-rating-card-3 {
  grid-area: user-rating-card-3;
}

.title-card__header {
  grid-area: title-card__header;
}

.title-card__info {
  grid-area: title-card__info;
}

/*  */
.user-review-card__img {
  grid-area: user-review-card__img;
}

.user-review-card__name {
  grid-area: user-review-card__name;
}

.user-review-card__status {
  grid-area: user-review-card__status;
}

.user-review-card__review {
  grid-area: user-review-card__review;
}

/*
1. display grid to main container
2. assign name to each of the grid elements
3. place grid elements with grid area template property
4. decide number of columns based on desktop design itself
*/

